src/generated/carl-parser/smtlibParser.cpp

// Generated from /home/travis/build/smtrat/carl-parser/src/carl-parser/smtlib.g4 by ANTLR 4.7


#include "smtlibListener.h"
#include "smtlibVisitor.h"

#include "smtlibParser.h"


using namespace antlrcpp;
using namespace carlparser;
using namespace antlr4;

smtlibParser::smtlibParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

smtlibParser::~smtlibParser() {
  delete _interpreter;
}

std::string smtlibParser::getGrammarFileName() const {
  return "smtlib.g4";
}

const std::vector<std::string>& smtlibParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& smtlibParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Spec_constantContext ------------------------------------------------------------------

smtlibParser::Spec_constantContext::Spec_constantContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* smtlibParser::Spec_constantContext::NUMERAL() {
  return getToken(smtlibParser::NUMERAL, 0);
}

tree::TerminalNode* smtlibParser::Spec_constantContext::DECIMAL() {
  return getToken(smtlibParser::DECIMAL, 0);
}

tree::TerminalNode* smtlibParser::Spec_constantContext::HEXADECIMAL() {
  return getToken(smtlibParser::HEXADECIMAL, 0);
}

tree::TerminalNode* smtlibParser::Spec_constantContext::BINARY() {
  return getToken(smtlibParser::BINARY, 0);
}

tree::TerminalNode* smtlibParser::Spec_constantContext::STRING() {
  return getToken(smtlibParser::STRING, 0);
}


size_t smtlibParser::Spec_constantContext::getRuleIndex() const {
  return smtlibParser::RuleSpec_constant;
}

void smtlibParser::Spec_constantContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSpec_constant(this);
}

void smtlibParser::Spec_constantContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSpec_constant(this);
}


antlrcpp::Any smtlibParser::Spec_constantContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<smtlibVisitor*>(visitor))
    return parserVisitor->visitSpec_constant(this);
  else
    return visitor->visitChildren(this);
}

smtlibParser::Spec_constantContext* smtlibParser::spec_constant() {
  Spec_constantContext *_localctx = _tracker.createInstance<Spec_constantContext>(_ctx, getState());
  enterRule(_localctx, 0, smtlibParser::RuleSpec_constant);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << smtlibParser::NUMERAL)
      | (1ULL << smtlibParser::DECIMAL)
      | (1ULL << smtlibParser::HEXADECIMAL)
      | (1ULL << smtlibParser::BINARY)
      | (1ULL << smtlibParser::STRING))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- S_exprContext ------------------------------------------------------------------

smtlibParser::S_exprContext::S_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

smtlibParser::Spec_constantContext* smtlibParser::S_exprContext::spec_constant() {
  return getRuleContext<smtlibParser::Spec_constantContext>(0);
}

tree::TerminalNode* smtlibParser::S_exprContext::SYMBOL() {
  return getToken(smtlibParser::SYMBOL, 0);
}

tree::TerminalNode* smtlibParser::S_exprContext::KEYWORD() {
  return getToken(smtlibParser::KEYWORD, 0);
}

tree::TerminalNode* smtlibParser::S_exprContext::LPAREN() {
  return getToken(smtlibParser::LPAREN, 0);
}

tree::TerminalNode* smtlibParser::S_exprContext::RPAREN() {
  return getToken(smtlibParser::RPAREN, 0);
}

std::vector<smtlibParser::S_exprContext *> smtlibParser::S_exprContext::s_expr() {
  return getRuleContexts<smtlibParser::S_exprContext>();
}

smtlibParser::S_exprContext* smtlibParser::S_exprContext::s_expr(size_t i) {
  return getRuleContext<smtlibParser::S_exprContext>(i);
}


size_t smtlibParser::S_exprContext::getRuleIndex() const {
  return smtlibParser::RuleS_expr;
}

void smtlibParser::S_exprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterS_expr(this);
}

void smtlibParser::S_exprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitS_expr(this);
}


antlrcpp::Any smtlibParser::S_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<smtlibVisitor*>(visitor))
    return parserVisitor->visitS_expr(this);
  else
    return visitor->visitChildren(this);
}

smtlibParser::S_exprContext* smtlibParser::s_expr() {
  S_exprContext *_localctx = _tracker.createInstance<S_exprContext>(_ctx, getState());
  enterRule(_localctx, 2, smtlibParser::RuleS_expr);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(47);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case smtlibParser::NUMERAL:
      case smtlibParser::DECIMAL:
      case smtlibParser::HEXADECIMAL:
      case smtlibParser::BINARY:
      case smtlibParser::STRING: {
        enterOuterAlt(_localctx, 1);
        setState(36);
        spec_constant();
        break;
      }

      case smtlibParser::SYMBOL: {
        enterOuterAlt(_localctx, 2);
        setState(37);
        match(smtlibParser::SYMBOL);
        break;
      }

      case smtlibParser::KEYWORD: {
        enterOuterAlt(_localctx, 3);
        setState(38);
        match(smtlibParser::KEYWORD);
        break;
      }

      case smtlibParser::LPAREN: {
        enterOuterAlt(_localctx, 4);
        setState(39);
        match(smtlibParser::LPAREN);
        setState(43);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << smtlibParser::LPAREN)
          | (1ULL << smtlibParser::NUMERAL)
          | (1ULL << smtlibParser::DECIMAL)
          | (1ULL << smtlibParser::HEXADECIMAL)
          | (1ULL << smtlibParser::BINARY)
          | (1ULL << smtlibParser::STRING)
          | (1ULL << smtlibParser::SYMBOL)
          | (1ULL << smtlibParser::KEYWORD))) != 0)) {
          setState(40);
          s_expr();
          setState(45);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(46);
        match(smtlibParser::RPAREN);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IndexContext ------------------------------------------------------------------

smtlibParser::IndexContext::IndexContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* smtlibParser::IndexContext::NUMERAL() {
  return getToken(smtlibParser::NUMERAL, 0);
}

tree::TerminalNode* smtlibParser::IndexContext::SYMBOL() {
  return getToken(smtlibParser::SYMBOL, 0);
}


size_t smtlibParser::IndexContext::getRuleIndex() const {
  return smtlibParser::RuleIndex;
}

void smtlibParser::IndexContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIndex(this);
}

void smtlibParser::IndexContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIndex(this);
}


antlrcpp::Any smtlibParser::IndexContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<smtlibVisitor*>(visitor))
    return parserVisitor->visitIndex(this);
  else
    return visitor->visitChildren(this);
}

smtlibParser::IndexContext* smtlibParser::index() {
  IndexContext *_localctx = _tracker.createInstance<IndexContext>(_ctx, getState());
  enterRule(_localctx, 4, smtlibParser::RuleIndex);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    _la = _input->LA(1);
    if (!(_la == smtlibParser::NUMERAL

    || _la == smtlibParser::SYMBOL)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifierContext ------------------------------------------------------------------

smtlibParser::IdentifierContext::IdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* smtlibParser::IdentifierContext::SYMBOL() {
  return getToken(smtlibParser::SYMBOL, 0);
}

tree::TerminalNode* smtlibParser::IdentifierContext::LPAREN() {
  return getToken(smtlibParser::LPAREN, 0);
}

tree::TerminalNode* smtlibParser::IdentifierContext::INDEXER() {
  return getToken(smtlibParser::INDEXER, 0);
}

tree::TerminalNode* smtlibParser::IdentifierContext::RPAREN() {
  return getToken(smtlibParser::RPAREN, 0);
}

std::vector<smtlibParser::IndexContext *> smtlibParser::IdentifierContext::index() {
  return getRuleContexts<smtlibParser::IndexContext>();
}

smtlibParser::IndexContext* smtlibParser::IdentifierContext::index(size_t i) {
  return getRuleContext<smtlibParser::IndexContext>(i);
}


size_t smtlibParser::IdentifierContext::getRuleIndex() const {
  return smtlibParser::RuleIdentifier;
}

void smtlibParser::IdentifierContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIdentifier(this);
}

void smtlibParser::IdentifierContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIdentifier(this);
}


antlrcpp::Any smtlibParser::IdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<smtlibVisitor*>(visitor))
    return parserVisitor->visitIdentifier(this);
  else
    return visitor->visitChildren(this);
}

smtlibParser::IdentifierContext* smtlibParser::identifier() {
  IdentifierContext *_localctx = _tracker.createInstance<IdentifierContext>(_ctx, getState());
  enterRule(_localctx, 6, smtlibParser::RuleIdentifier);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(62);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case smtlibParser::SYMBOL: {
        enterOuterAlt(_localctx, 1);
        setState(51);
        match(smtlibParser::SYMBOL);
        break;
      }

      case smtlibParser::LPAREN: {
        enterOuterAlt(_localctx, 2);
        setState(52);
        match(smtlibParser::LPAREN);
        setState(53);
        match(smtlibParser::INDEXER);
        setState(54);
        match(smtlibParser::SYMBOL);
        setState(56); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(55);
          index();
          setState(58); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == smtlibParser::NUMERAL

        || _la == smtlibParser::SYMBOL);
        setState(60);
        match(smtlibParser::RPAREN);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Attribute_valueContext ------------------------------------------------------------------

smtlibParser::Attribute_valueContext::Attribute_valueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

smtlibParser::Spec_constantContext* smtlibParser::Attribute_valueContext::spec_constant() {
  return getRuleContext<smtlibParser::Spec_constantContext>(0);
}

tree::TerminalNode* smtlibParser::Attribute_valueContext::SYMBOL() {
  return getToken(smtlibParser::SYMBOL, 0);
}

tree::TerminalNode* smtlibParser::Attribute_valueContext::LPAREN() {
  return getToken(smtlibParser::LPAREN, 0);
}

tree::TerminalNode* smtlibParser::Attribute_valueContext::RPAREN() {
  return getToken(smtlibParser::RPAREN, 0);
}

std::vector<smtlibParser::S_exprContext *> smtlibParser::Attribute_valueContext::s_expr() {
  return getRuleContexts<smtlibParser::S_exprContext>();
}

smtlibParser::S_exprContext* smtlibParser::Attribute_valueContext::s_expr(size_t i) {
  return getRuleContext<smtlibParser::S_exprContext>(i);
}


size_t smtlibParser::Attribute_valueContext::getRuleIndex() const {
  return smtlibParser::RuleAttribute_value;
}

void smtlibParser::Attribute_valueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttribute_value(this);
}

void smtlibParser::Attribute_valueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttribute_value(this);
}


antlrcpp::Any smtlibParser::Attribute_valueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<smtlibVisitor*>(visitor))
    return parserVisitor->visitAttribute_value(this);
  else
    return visitor->visitChildren(this);
}

smtlibParser::Attribute_valueContext* smtlibParser::attribute_value() {
  Attribute_valueContext *_localctx = _tracker.createInstance<Attribute_valueContext>(_ctx, getState());
  enterRule(_localctx, 8, smtlibParser::RuleAttribute_value);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(74);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case smtlibParser::NUMERAL:
      case smtlibParser::DECIMAL:
      case smtlibParser::HEXADECIMAL:
      case smtlibParser::BINARY:
      case smtlibParser::STRING: {
        enterOuterAlt(_localctx, 1);
        setState(64);
        spec_constant();
        break;
      }

      case smtlibParser::SYMBOL: {
        enterOuterAlt(_localctx, 2);
        setState(65);
        match(smtlibParser::SYMBOL);
        break;
      }

      case smtlibParser::LPAREN: {
        enterOuterAlt(_localctx, 3);
        setState(66);
        match(smtlibParser::LPAREN);
        setState(70);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << smtlibParser::LPAREN)
          | (1ULL << smtlibParser::NUMERAL)
          | (1ULL << smtlibParser::DECIMAL)
          | (1ULL << smtlibParser::HEXADECIMAL)
          | (1ULL << smtlibParser::BINARY)
          | (1ULL << smtlibParser::STRING)
          | (1ULL << smtlibParser::SYMBOL)
          | (1ULL << smtlibParser::KEYWORD))) != 0)) {
          setState(67);
          s_expr();
          setState(72);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(73);
        match(smtlibParser::RPAREN);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributeContext ------------------------------------------------------------------

smtlibParser::AttributeContext::AttributeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* smtlibParser::AttributeContext::KEYWORD() {
  return getToken(smtlibParser::KEYWORD, 0);
}

smtlibParser::Attribute_valueContext* smtlibParser::AttributeContext::attribute_value() {
  return getRuleContext<smtlibParser::Attribute_valueContext>(0);
}


size_t smtlibParser::AttributeContext::getRuleIndex() const {
  return smtlibParser::RuleAttribute;
}

void smtlibParser::AttributeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttribute(this);
}

void smtlibParser::AttributeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttribute(this);
}


antlrcpp::Any smtlibParser::AttributeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<smtlibVisitor*>(visitor))
    return parserVisitor->visitAttribute(this);
  else
    return visitor->visitChildren(this);
}

smtlibParser::AttributeContext* smtlibParser::attribute() {
  AttributeContext *_localctx = _tracker.createInstance<AttributeContext>(_ctx, getState());
  enterRule(_localctx, 10, smtlibParser::RuleAttribute);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(smtlibParser::KEYWORD);
    setState(78);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << smtlibParser::LPAREN)
      | (1ULL << smtlibParser::NUMERAL)
      | (1ULL << smtlibParser::DECIMAL)
      | (1ULL << smtlibParser::HEXADECIMAL)
      | (1ULL << smtlibParser::BINARY)
      | (1ULL << smtlibParser::STRING)
      | (1ULL << smtlibParser::SYMBOL))) != 0)) {
      setState(77);
      attribute_value();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SortContext ------------------------------------------------------------------

smtlibParser::SortContext::SortContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

smtlibParser::IdentifierContext* smtlibParser::SortContext::identifier() {
  return getRuleContext<smtlibParser::IdentifierContext>(0);
}

tree::TerminalNode* smtlibParser::SortContext::LPAREN() {
  return getToken(smtlibParser::LPAREN, 0);
}

tree::TerminalNode* smtlibParser::SortContext::RPAREN() {
  return getToken(smtlibParser::RPAREN, 0);
}

std::vector<smtlibParser::SortContext *> smtlibParser::SortContext::sort() {
  return getRuleContexts<smtlibParser::SortContext>();
}

smtlibParser::SortContext* smtlibParser::SortContext::sort(size_t i) {
  return getRuleContext<smtlibParser::SortContext>(i);
}


size_t smtlibParser::SortContext::getRuleIndex() const {
  return smtlibParser::RuleSort;
}

void smtlibParser::SortContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSort(this);
}

void smtlibParser::SortContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSort(this);
}


antlrcpp::Any smtlibParser::SortContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<smtlibVisitor*>(visitor))
    return parserVisitor->visitSort(this);
  else
    return visitor->visitChildren(this);
}

smtlibParser::SortContext* smtlibParser::sort() {
  SortContext *_localctx = _tracker.createInstance<SortContext>(_ctx, getState());
  enterRule(_localctx, 12, smtlibParser::RuleSort);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(90);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(80);
      identifier();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(81);
      match(smtlibParser::LPAREN);
      setState(82);
      identifier();
      setState(84); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(83);
        sort();
        setState(86); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == smtlibParser::LPAREN

      || _la == smtlibParser::SYMBOL);
      setState(88);
      match(smtlibParser::RPAREN);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Qual_identifierContext ------------------------------------------------------------------

smtlibParser::Qual_identifierContext::Qual_identifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

smtlibParser::IdentifierContext* smtlibParser::Qual_identifierContext::identifier() {
  return getRuleContext<smtlibParser::IdentifierContext>(0);
}

tree::TerminalNode* smtlibParser::Qual_identifierContext::LPAREN() {
  return getToken(smtlibParser::LPAREN, 0);
}

tree::TerminalNode* smtlibParser::Qual_identifierContext::AS() {
  return getToken(smtlibParser::AS, 0);
}

smtlibParser::SortContext* smtlibParser::Qual_identifierContext::sort() {
  return getRuleContext<smtlibParser::SortContext>(0);
}

tree::TerminalNode* smtlibParser::Qual_identifierContext::RPAREN() {
  return getToken(smtlibParser::RPAREN, 0);
}


size_t smtlibParser::Qual_identifierContext::getRuleIndex() const {
  return smtlibParser::RuleQual_identifier;
}

void smtlibParser::Qual_identifierContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQual_identifier(this);
}

void smtlibParser::Qual_identifierContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQual_identifier(this);
}


antlrcpp::Any smtlibParser::Qual_identifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<smtlibVisitor*>(visitor))
    return parserVisitor->visitQual_identifier(this);
  else
    return visitor->visitChildren(this);
}

smtlibParser::Qual_identifierContext* smtlibParser::qual_identifier() {
  Qual_identifierContext *_localctx = _tracker.createInstance<Qual_identifierContext>(_ctx, getState());
  enterRule(_localctx, 14, smtlibParser::RuleQual_identifier);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(99);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(92);
      identifier();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(93);
      match(smtlibParser::LPAREN);
      setState(94);
      match(smtlibParser::AS);
      setState(95);
      identifier();
      setState(96);
      sort();
      setState(97);
      match(smtlibParser::RPAREN);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_bindingContext ------------------------------------------------------------------

smtlibParser::Var_bindingContext::Var_bindingContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* smtlibParser::Var_bindingContext::LPAREN() {
  return getToken(smtlibParser::LPAREN, 0);
}

tree::TerminalNode* smtlibParser::Var_bindingContext::SYMBOL() {
  return getToken(smtlibParser::SYMBOL, 0);
}

smtlibParser::TermContext* smtlibParser::Var_bindingContext::term() {
  return getRuleContext<smtlibParser::TermContext>(0);
}

tree::TerminalNode* smtlibParser::Var_bindingContext::RPAREN() {
  return getToken(smtlibParser::RPAREN, 0);
}


size_t smtlibParser::Var_bindingContext::getRuleIndex() const {
  return smtlibParser::RuleVar_binding;
}

void smtlibParser::Var_bindingContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_binding(this);
}

void smtlibParser::Var_bindingContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_binding(this);
}


antlrcpp::Any smtlibParser::Var_bindingContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<smtlibVisitor*>(visitor))
    return parserVisitor->visitVar_binding(this);
  else
    return visitor->visitChildren(this);
}

smtlibParser::Var_bindingContext* smtlibParser::var_binding() {
  Var_bindingContext *_localctx = _tracker.createInstance<Var_bindingContext>(_ctx, getState());
  enterRule(_localctx, 16, smtlibParser::RuleVar_binding);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    match(smtlibParser::LPAREN);
    setState(102);
    match(smtlibParser::SYMBOL);
    setState(103);
    term();
    setState(104);
    match(smtlibParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Sorted_varContext ------------------------------------------------------------------

smtlibParser::Sorted_varContext::Sorted_varContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* smtlibParser::Sorted_varContext::LPAREN() {
  return getToken(smtlibParser::LPAREN, 0);
}

tree::TerminalNode* smtlibParser::Sorted_varContext::SYMBOL() {
  return getToken(smtlibParser::SYMBOL, 0);
}

smtlibParser::SortContext* smtlibParser::Sorted_varContext::sort() {
  return getRuleContext<smtlibParser::SortContext>(0);
}

tree::TerminalNode* smtlibParser::Sorted_varContext::RPAREN() {
  return getToken(smtlibParser::RPAREN, 0);
}


size_t smtlibParser::Sorted_varContext::getRuleIndex() const {
  return smtlibParser::RuleSorted_var;
}

void smtlibParser::Sorted_varContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSorted_var(this);
}

void smtlibParser::Sorted_varContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<smtlibListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSorted_var(this);
}


antlrcpp::Any smtlibParser::Sorted_varContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<smtlibVisitor*>(visitor))
    return parserVisitor->visitSorted_var(this);
  else
    return visitor->visitChildren(this);
}

smtlibParser::Sorted_varContext* smtlibParser::sorted_var() {
  Sorted_varContext *_localctx = _tracker.createInstance<Sorted_varContext>(_ctx, getState());
  enterRule(_localctx, 18, smtlibParser::RuleSorted_var);
